# xion-pet-game

./: .env.example  .gitignore  DEPLOYMENT.md  DEPLOYMENT_ALTERNATIVE.md  LICENSE  _layout.tsx  app.json  metro.config.js  package-lock.json  package.json
(tabs)/: _layout.tsx  nft.tsx  pet.tsx
app/: +not-found.tsx  _layout.tsx
app/(tabs)/: _layout.tsx  explore.tsx  index.tsx  nft.tsx  pet.tsx  play.tsx
components/: Decoration.tsx  ExternalDataProofDemo.tsx  LoadingSpinner.tsx  ParallaxScrollView.tsx  Pet.tsx  PetCareSettings.tsx  PetHouse.tsx  PetMinter.tsx  PetMinterDemo.tsx  PetRarity.tsx  PetSVG.tsx  PetSelector.tsx  PetSprite.tsx  QuickSwapPets.tsx  XionDemoStatus.tsx
components/ui/: IconSymbol.tsx
contracts/: Cargo.toml  build_contracts.sh  pet_interaction_contract.rs  pet_nft_contract.rs
contracts/achievement/: Cargo.toml
contracts/achievement/src/: lib.rs
contracts/pet-interaction/: Cargo.toml
contracts/pet-interaction/src/: lib.rs
contracts/pet-nft/: Cargo.toml
contracts/src/: achievement_contract.rs  lib.rs  pet_interaction_contract.rs  pet_nft_contract.rs  user_map_contract.rs
contracts/user-map/: Cargo.toml
deployment/: README.md  build.sh  deploy.sh  setup-env.sh  test.sh  validate.sh
examples/: PetCareTimerExample.tsx
hooks/: useAchievements.ts  useColorScheme.ts  useColorScheme.web.ts  useDaveIntegration.ts  usePetCare.ts
scripts/: deploy_all_contracts.js  deploy_nft_contract.js  deploy_xion_contracts.sh  test_deployment.sh
services/: achievementVerification.ts  daveXionClient.ts  gameVerification.ts  petBonusManager.ts  petCare.ts  reclaimZkTLS.ts  verification.ts  zkTLSManager.ts
types/: achievements.ts  pet.ts  petBonuses.ts  petCareTimers.ts  zkTLS.ts
