[package]
name = "pet-nft-contract"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "1.4"
cosmwasm-std = "1.4"
cw2 = "1.1"
cw721 = "0.21"
cw721-base = "0.21"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
anyhow = "1.0"
cosmwasm-storage = "1.4"

