[package]
name = "xion-pet-contracts"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# Multiple binaries for different contracts
[[bin]]
name = "pet_nft_contract"
path = "pet_nft_contract.rs"

[[bin]]
name = "achievement_contract"
path = "achievement_contract.rs"

[[bin]]
name = "pet_interaction_contract"
path = "pet_interaction_contract.rs"

[dependencies]
cosmwasm-schema = "1.4"
cosmwasm-std = "1.4"
cw2 = "1.1"
cw721 = "0.21"
cw721-base = "0.21"
cw-storage-plus = "1.1"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
cosmwasm-storage = "1.4"

