[package]
name = "user-map-contract"
version = "1.0.0"
edition = "2021"

exclude = ["contract.wasm", "hash.txt"]

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
library = []

[dependencies]
cosmwasm-schema = "1.5.0"
cosmwasm-std = "1.5.0" 
cw-storage-plus = "1.2.0"
cw2 = "1.1.0"
cw721 = "0.18.0"
cw721-base = { version = "0.18.0", features = ["library"] }
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.21" }
schemars = "0.8.10"

[dev-dependencies]
cw-multi-test = "0.20.0"

