[package]
name = "achievement-contract"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-schema = "1.2"
cosmwasm-std = "1.2"
cw2 = "0.16"
cw-storage-plus = "0.16"
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
anyhow = "1.0"
cosmwasm-storage = "1.3"
