[package]
name = "user-map-contract"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
library = []

[dependencies]
cosmwasm-schema = "1.5.0"
cosmwasm-std = "1.5.0"
cw-storage-plus = "1.2.0"
cw2 = "1.1.0"
schemars = "0.8.10"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.31" }